Fix footer footnote alignment

--- a/WEEK1/css/footer.css
+++ b/WEEK1/css/footer.css
@@ -10,11 +10,15 @@ body {
     letter-spacing: 0.1rem;
 }
 
-/**/
+/* Footer Formatting */
+
+.footer__start, .footer__branding, .footer__navigation, .footer__socmed {
+    padding: 2rem;
+    margin: 1rem;
+} 
+
 .footer__section {
-    display: flex;
     justify-content: center;
-    flex-direction: column;
   }
 
 .footer__start {
@@ -22,15 +26,10 @@ body {
     justify-content: center;  
 } 
 
-.footer__branding {
+.footer__section, .footer__branding, .footer__contact {
     display: flex;
     flex-direction: column;  
 } 
-
-.footer__contact {
-    display: flex;
-    flex-direction: column; 
-}
 
 .footer__contact-info {
     display: flex;
@@ -41,12 +40,6 @@ body {
 .footer__contact-text {
     margin-left: 0.5rem;
 }
-
-.footer__start, .footer__branding, .footer__navigation, .footer__socmed {
-    padding: 2rem;
-    margin: 1rem;
-  
-} 
 
 .footer__navigation {
     display: flex;
@@ -62,7 +55,6 @@ body {
     fill: #ffffff;
 }
 
-
 .footer__socmed-icon {
     width: 16px;
     height: auto; 
@@ -71,4 +63,47 @@ body {
 .footer__socmed-image {
     width: 125px;
     height: auto; 
+}
+
+.footer__socmed-group {
+    padding: 0.5rem;
+    margin: 0.5rem;
+}
+
+.footer__socmed-link {
+    border-radius: 30px;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    background-color: #0e2433;
+    text-decoration: none;
+}
+
+.footer__bottom {
+    text-align: center;
+}
+
+hr {  
+    border-top: 1px solid #e3e4e5;
+    width: 90%;
+  }
+
+.footer__bottom-footnote {
+    flex-direction: column;
+}
+
+.footer__bottom-footnote, .footer__bottom-footnote-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__bottom-footnote-content {
+    margin-left: 0.5rem;
+    padding-bottom: 0;
+    font-size: small; 
+}
+
+.footer__socmed-textlink {
+    text-decoration: none;
+    color: #ffffff;
 }
